--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
     <link rel="manifest" href="./site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="League of Legends Item guesser">
+    <meta name="description" content="Guess the name of old items from League of Legends!">
+    <meta name="keywords" content="League of Legends,League of Legends item guesser, lol item guesser">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Jckpt">
     <title>League item guesser</title>
   </head>
   <body>
