--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
     <link rel="manifest" href="./site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="League of Legends Item guesser">
-    <meta name="description" content="Guess the name of old items from League of Legends!">
-    <meta name="keywords" content="League of Legends,League of Legends item guesser, lol item guesser">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="author" content="Jckpt">
+    <!-- Primary Meta Tags -->
     <title>League item guesser</title>
+    <meta name="title" content="League item guesser">
+    <meta name="description" content="Guess the name of old items from League of Legends!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://league-item-guesser.vercel.app/">
+    <meta property="og:title" content="League item guesser">
+    <meta property="og:description" content="Guess the name of old items from League of Legends!">
+    <meta property="og:image" content="https://league-item-guesser.vercel.app/favicon-32x32.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://league-item-guesser.vercel.app/">
+    <meta property="twitter:title" content="League item guesser">
+    <meta property="twitter:description" content="Guess the name of old items from League of Legends!">
+    <meta property="twitter:image" content="https://league-item-guesser.vercel.app/favicon-32x32.png">
+    <meta name="author" content="Jckpt">
   </head>
   <body>
     <div id="root"></div>
