--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta property="og:url" content="https://league-item-guesser.vercel.app/">
     <meta property="og:title" content="League item guesser">
     <meta property="og:description" content="Guess the name of old items from League of Legends!">
-    <meta property="og:image" content="https://league-item-guesser.vercel.app/favicon-32x32.png">
+    <meta property="og:image" content="https://league-item-guesser.vercel.app/banner.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://league-item-guesser.vercel.app/">
     <meta property="twitter:title" content="League item guesser">
     <meta property="twitter:description" content="Guess the name of old items from League of Legends!">
-    <meta property="twitter:image" content="https://league-item-guesser.vercel.app/favicon-32x32.png">
+    <meta property="twitter:image" content="https://league-item-guesser.vercel.app/banner.png">
     <meta name="author" content="Jckpt">
   </head>
   <body>
