--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://league-item-guesser.vercel.app/">
     <meta property="og:title" content="League item guesser">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
     <meta property="og:description" content="Guess the name of old items from League of Legends!">
     <meta property="og:image" content="https://league-item-guesser.vercel.app/banner.png">
 
